--- a/andriod_activity_predictor/android/app/build.gradle
+++ b/andriod_activity_predictor/android/app/build.gradle
@@ -29,8 +29,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.andriod_activity_predictor"
-        minSdkVersion 18
+        applicationId "com.example.ble2"
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
