--- a/andriod_activity_predictor/ios/Runner/Info.plist
+++ b/andriod_activity_predictor/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>andriod_activity_predictor</string>
+	<string>ble2</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
