interim checkin, andriod collector part finished & flutter-blue now has dynamic MTU to align with BLE characteristic size being sent by Arduino

--- a/andriod_activity_predictor/android/app/build.gradle
+++ b/andriod_activity_predictor/android/app/build.gradle
@@ -29,7 +29,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.ble2"
+        applicationId "edu.e2pii.activity_manager"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
