--- a/andriod_activity_predictor/android/app/src/profile/AndroidManifest.xml
+++ b/andriod_activity_predictor/android/app/src/profile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ble2">
+    package="edu.e2pii.activity_manager">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
