--- a/andriod_activity_predictor/pubspec.yaml
+++ b/andriod_activity_predictor/pubspec.yaml
@@ -1,5 +1,5 @@
-name: ble2
-description: A new Flutter project.
+name: activity_manager
+description: An application to interact with Arduion Nano 33 Sense for activity prediction
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_blue: 0.6.3+1
+  path_provider: ^2.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
