--- a/andriod_activity_predictor/pubspec.yaml
+++ b/andriod_activity_predictor/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   flutter_blue: 0.6.3+1
   path_provider: ^2.0.2
-
+  flutter_file_manager: ^0.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
